tests/idris2/error005/expected
1/1: Building IfErr (IfErr.idr)
Error: While processing right hand side of foo. Can't find an implementation for Eq a.

IfErr:4:11--4:17
 1 | data Wibble = Wobble
 2 | 
 3 | foo : a -> a -> Bool
 4 | foo x y = x == y
               ^^^^^^

Error: While processing right hand side of bar. Can't find an implementation for Eq Wibble.

IfErr:7:11--7:17
 3 | foo : a -> a -> Bool
 4 | foo x y = x == y
 5 | 
 6 | bar : Wibble -> Wibble -> Bool
 7 | bar x y = x == y
               ^^^^^^

